k8s-event_driven/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - port: 15672:15672
      targetPort: 15672:15672
      name: rabbitmq
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: redis-order
  replicas: 1
  selector:
    matchLabels:
      app: redis-order
  template:
    metadata:
      labels:
        app: redis-order
    spec:
      containers:
      - name: redis
        image: bitnami/redis:latest
        ports:
        - containerPort: 6379
