k8s-event_driven/redis-order.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-order-s
spec:
  type: ClusterIP
  selector:
    app: redis-order
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-order
spec:
  serviceName: redis-order
  replicas: 1
  selector:
    matchLabels:
      app: redis-order
  template:
    metadata:
      labels:
        app: redis-order
    spec:
      containers:
      - name: redis
        image: bitnami/redis:latest
        ports:
        - containerPort: 6379
