k8s-event_driven/redis-stock.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-stock-s
spec:
  type: ClusterIP
  selector:
    app: redis-stock
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stock
spec:
  serviceName: redis-stock
  replicas: 1
  selector:
    matchLabels:
      app: redis-stock
  template:
    metadata:
      labels:
        app: redis-stock
    spec:
      containers:
      - name: redis
        image: bitnami/redis:latest
        ports:
        - containerPort: 6379
