k8s-event_driven/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
   - http:
      paths:
        - path: /queue/?(.*)
          pathType: Prefix
          backend:
            service:
              name: queue-service
              port:
                number: 15672
        - path: /orders/?(.*)
          pathType: Prefix
          backend:
            service:
              name: order-service
              port:
                number: 5000
        - path: /stock/?(.*)
          pathType: Prefix
          backend:
            service:
              name: stock-service
              port:
                number: 5000
        - path: /payment/?(.*)
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 5000
